--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "tsc && vite build",
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
